Added playbook to run reddit in docker container

--- a/docker-monolith/infra/ansible.cfg
+++ b/docker-monolith/infra/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
+inventory = inventory.yml
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 # Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
