--- a/src/ui/Dockerfile.1
+++ b/src/ui/Dockerfile.1
@@ -1,7 +1,6 @@
-FROM ubuntu:16.04 
-
-RUN apt-get update \
-    && apt-get install -y ruby-full ruby-dev build-essential \ 
+RUN apk update && apk upgrade \
+    && apk add --update --no-cache build-base ruby ruby-json ruby-bundler ruby-dev \
+    && rm -rf /var/cache/apk/* \
     && gem install bundler --no-ri --no-rdoc
 
 ENV APP_HOME /app
