--- a/src/comment/Dockerfile
+++ b/src/comment/Dockerfile
@@ -1,6 +1,7 @@
 FROM ruby:2.2
 
-RUN apt-get update -qq && apt-get install -y build-essential
+RUN apt-get update -qq \
+    && apt-get install -y build-essential
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME 
