--- a/src/ui/Dockerfile.1
+++ b/src/ui/Dockerfile.1
@@ -1,3 +1,5 @@
+FROM alpine:3.7
+
 RUN apk update && apk upgrade \
     && apk add --update --no-cache build-base ruby ruby-json ruby-bundler ruby-dev \
     && rm -rf /var/cache/apk/* \
