--- a/docker-monolith/infra/ansible.cfg
+++ b/docker-monolith/infra/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory.yml
+# inventory = inventory.yml
 remote_user = appuser
 private_key_file = ~/.ssh/appuser
 # Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
@@ -10,8 +10,8 @@ retry_files_enabled = False
 roles_path = ./roles
 # vault_password_file = vault.key
 
-# [inventory]
-# enable_plugins = gcp_compute
+[inventory]
+enable_plugins = gcp_compute
 
 [diff]
 # Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
