--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,24 @@ stages:
   - test
   - deploy
 
+variables:
+  DATABASE_URL: 'mongodb://mongo/user_posts'
+
+before_script:
+  - cd reddit
+  - bundle install
+
 build_job:
   stage: build
   script:
     - echo 'Building'
 
-test_unit_job:
-  stage: test
+test_unit_job: 
+  stage: test 
+  services:
+    - mongo:latest 
   script:
-    - echo 'Testing 1'
+    - ruby simpletest.rb
 
 test_integration_job:
   stage: test
