--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,13 +31,16 @@ test_integration_job:
   script:
     - echo 'Testing 2'
 
-deploy_dev_job: 
-  stage: review 
-  script:
-    - echo 'Deploy' 
+branch review:
+  stage: review
+  script: echo "Deploy to $CI_ENVIRONMENT_SLUG" 
   environment:
-    name: dev
-    url: http://dev.example.com
+    name: branch/$CI_COMMIT_REF_NAME
+    url: http://$CI_ENVIRONMENT_SLUG.example.com 
+  only:
+    - branches 
+  except:
+    - master
 
 stage: 
   stage: stage 
