Added docker info into before_script in .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,8 @@ variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
 
 before_script:
+  - docker info
+  - echo $GOOGLE_APPLICATION_CREDENTIALS
   - cd reddit
   - bundle install
 
