Fixed4 .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ build:
   image: docker:19.03.1
   stage: build
   services:
-    name: docker:19.03.1-dind
-    entrypoint: ["env", "-u", "DOCKER_HOST"]
-    command: ["dockerd-entrypoint.sh"]
+    - docker:19.03.1-dind
+    # entrypoint: ["env", "-u", "DOCKER_HOST"]
+    # command: ["dockerd-entrypoint.sh"]
   before_script:
   script:
     - docker info
