--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build:
   image: docker:19.03.1
   stage: build
   services:
-    name: docker:19.03.1-dind
+  - docker:19.03.1-dind
     alas: docker
     entrypoint: ["env", "-u", "DOCKER_HOST"]
     command: ["dockerd-entrypoint.sh"]
