--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ stages:
 
 variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
-  # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
-  DOCKER_HOST: tcp://docker:2376
-  DOCKER_TLS_CERTDIR: "/certs"
+  # # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
+  # DOCKER_HOST: tcp://docker:2376
+  # DOCKER_TLS_CERTDIR: "/certs"
 
 before_script:
   - echo $GOOGLE_APPLICATION_CREDENTIALS
@@ -21,6 +21,11 @@ before_script:
 build:
   image: docker:19.03.1
   stage: build
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_DRIVER: overlay2
+    # See https://github.com/docker-library/docker/pull/166
+    DOCKER_TLS_CERTDIR: ""
   services:
   - name: docker:19.03.1-dind
     entrypoint: ["env", "-u", "DOCKER_HOST"]
