Fixed15 .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,6 @@ stages:
 
 variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
-  # # Use TLS https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#tls-enabled
-  # DOCKER_HOST: tcp://docker:2376
-  # DOCKER_TLS_CERTDIR: "/certs"
 
 before_script:
   - echo $GOOGLE_APPLICATION_CREDENTIALS
@@ -19,17 +16,8 @@ before_script:
   # - bundle install
 
 build:
-  image: docker:19.03.1
+  image: docker:stable
   stage: build
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
-    # See https://github.com/docker-library/docker/pull/166
-    DOCKER_TLS_CERTDIR: ""
-  services:
-  - name: docker:19.03.1-dind
-    entrypoint: ["env", "-u", "DOCKER_HOST"]
-    command: ["dockerd-entrypoint.sh"]
   before_script:
   script:
     - docker info
