--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,11 @@ build:
   before_script:
   script:
     - docker --version
+    - echo 'Building'
+    - cd reddit/
+    - docker build -t $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA .
+    - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD
+    - docker push $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
 
 
 test_unit_job: 
