--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,15 @@ before_script:
 build:
   image: docker:stable
   stage: build
-  before_script:
+  variables:
+    DOCKER_HOST: tcp://docker:2375/
+    DOCKER_DRIVER: overlay2
+    # See https://github.com/docker-library/docker/pull/166
+    DOCKER_TLS_CERTDIR: ""
+  services:
+      - name: docker:dind
+        entrypoint: ["env", "-u", "DOCKER_HOST"]
+        command: ["dockerd-entrypoint.sh"]
   script:
     - docker --version
     - echo 'Building'
