fixing docker build in .gitlab-ci.yml - try4

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,18 +16,18 @@ before_script:
   # - bundle install
 
 build:
-  image: docker:stable
+  image: docker:18.09
   stage: build
+  services:
+      - name: docker:18.09-dind
+        # alias: docker
+        # entrypoint: ["env", "-u", "DOCKER_HOST"]
+        # command: ["dockerd-entrypoint.sh"]
   variables:
     DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
     # See https://github.com/docker-library/docker/pull/166
     DOCKER_TLS_CERTDIR: ""
-  services:
-      - name: docker:dind
-        alias: docker
-        entrypoint: ["env", "-u", "DOCKER_HOST"]
-        command: ["dockerd-entrypoint.sh"]
   script:
     - docker --version
     - echo 'Building'
