fixing docker build in .gitlab-ci.yml - try6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ build:
   image: docker:18.09
   stage: build
   services:
-      - name: docker:18.09-dind
+      - docker:18.09-dind
         # alias: docker
         # entrypoint: ["env", "-u", "DOCKER_HOST"]
         # command: ["dockerd-entrypoint.sh"]
