--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,11 @@ before_script:
 build:
   image: docker:18.09
   stage: build
-  services:
-      - docker:18.09-dind
-  variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
+  # services:
+  #     - docker:18.09-dind
+  # variables:
+  #   DOCKER_HOST: tcp://docker:2375/
+  #   DOCKER_DRIVER: overlay2
   script:
     - docker --version
     - echo 'Building'
