--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -7,25 +7,51 @@ services:
     networks:
       - reddit
   ui:
-    build: ./ui
+    # build: ./ui
     image: ${USERNAME}/ui:${UI_VERSION}
     ports:
       - 9292:${REDDIT_PORT}/tcp
     networks:
       - reddit
   post:
-    build: ./post-py
+    # build: ./post-py
     image: ${USERNAME}/post:${POST_VERSION}
     networks:
       - reddit
   comment:
-    build: ./comment
+    # build: ./comment
     image: ${USERNAME}/comment:${COMMENT_VERSION}
+    networks:
+      - reddit
+  prometheus:
+    image: ${USERNAME}/prometheus
+    ports:
+      - '9090:9090'
+    volumes:
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention=1d'
+    networks:
+      - reddit
+  node-exporter:
+    image: prom/node-exporter:v0.15.2
+    user: root
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
     networks:
       - reddit
 
 volumes:
   post_db:
+  prometheus_data:
 
 networks:
   reddit:
