--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ build:
   stage: build
   services:
       - docker:18.09-dind
+  only:
+    - /^build/
   variables:
     DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
@@ -58,17 +60,17 @@ stage:
   image: docker:18.09
   stage: stage 
   when: manual
-  only:
-    - /^\d+\.\d+\.\d+/
-  services:
-      - docker:18.09-dind
+  # only:
+  #   - /^\d+\.\d+\.\d+/
+  # services:
+  #     - docker:18.09-dind
   variables:
-    DOCKER_HOST: tcp://docker:2375/
-    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://104.155.2.98:2375
+    # DOCKER_DRIVER: overlay2
   script:
     - echo 'Deploy' 
     - docker --version
-    - docker-machine --version
+    # - docker-machine --version
   environment:
     name: stage
     url: https://beta.example.com
