--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ branch review:
     name: branch/$CI_COMMIT_REF_NAME
     url: http://$CI_ENVIRONMENT_SLUG.example.com 
   only:
-    - branches 
+    # - branches 
     - /^review/
   except:
     - master
@@ -71,7 +71,7 @@ stage:
   # services:
   #     - docker:18.09-dind
   variables:
-    DOCKER_HOST: tcp://staging-docker:2375
+    DOCKER_HOST: tcp://staging-docker:2376
     # DOCKER_DRIVER: overlay2
   script:
     - echo 'Deploy' 
