--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ stage:
   # services:
   #     - docker:18.09-dind
   variables:
-    DOCKER_HOST: tcp://staging-docker:2376
+    DOCKER_HOST: tcp://104.155.2.98:2376
     # DOCKER_DRIVER: overlay2
   script:
     - echo 'Deploy' 
