--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ stage:
   #     - docker:18.09-dind
   variables:
     DOCKER_HOST: tcp://104.155.2.98:2376
-    # DOCKER_DRIVER: overlay2
+    DOCKER_DRIVER: overlay2
   script:
     - echo 'Deploy' 
     - docker --version
