--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,8 +71,9 @@ stage:
   # services:
   #     - docker:18.09-dind
   variables:
-    DOCKER_HOST: tcp://104.155.2.98:2376
-    DOCKER_DRIVER: overlay2
+    # DOCKER_HOST: tcp://104.155.2.98:2376
+    DOCKER_HOST: ssh://appuser@104.155.2.98
+    # DOCKER_DRIVER: overlay2
   script:
     - echo 'Deploy' 
     - docker --version
