--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,9 @@ stage:
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
     - docker run -d -p 9292:9292 $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
-    # - docker-machine --version
+    - docker-machine --version
+    - base=https://github.com/docker/machine/releases/download/v0.16.0 && curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/usr/local/bin/docker-machine && chmod +x /usr/local/bin/docker-machine
+    - docker-machine --version    
   environment:
     name: stage
     url: https://beta.example.com
