--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ stage:
     - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
     # - docker-machine --version
+    - apt install curl
     - base=https://github.com/docker/machine/releases/download/v0.16.0 && curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/usr/local/bin/docker-machine && chmod +x /usr/local/bin/docker-machine
     - docker-machine --version    
   environment:
