--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ build:
   stage: build
   services:
       - docker:18.09-dind
-  # only:
-  #   - /^build/
+  only:
+    - /^build/
   variables:
     DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
@@ -83,7 +83,7 @@ stage:
     - echo "$TLSCERT" > $DOCKER_CERT_PATH/cert.pem
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
     # - docker rm -f reddit
-    - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
+    # - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
     # - docker-machine --version
     - apk add --update curl && rm -rf /var/cache/apk/*
