--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ stage:
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
     # - docker rm -f reddit
     # - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
-    - docker run -d --name reddit-$CI_COMMIT_SHORT_SHA --network staging $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
+    - docker run -d --name reddit-$CI_COMMIT_SHORT_SHA --network ivango812_microservices_staging $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
     # - apk add --update curl && rm -rf /var/cache/apk/*
     # - base=https://github.com/docker/machine/releases/download/v0.16.0 && curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/usr/local/bin/docker-machine && chmod +x /usr/local/bin/docker-machine
