--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,22 +71,24 @@ stage:
     DOCKER_HOST: tcp://104.155.2.98:2376
     DOCKER_TLS_VERIFY: 1
     DOCKER_CERT_PATH: "/certs"
+    CONTAINER_NAME: reddit-$CI_COMMIT_SHORT_SHA
   script:
     - echo 'Deploy' 
     - echo "$TLSCACERT" > $DOCKER_CERT_PATH/ca.pem
     - echo "$TLSCERT" > $DOCKER_CERT_PATH/cert.pem
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
-    # - docker rm -f reddit
     # - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
-    - docker run -d --name reddit-$CI_COMMIT_SHORT_SHA --network ivango812_microservices_staging $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
+    - docker rm -f $CONTAINER_NAME || true
+    - docker run -d --name $CONTAINER_NAME --network ivango812_microservices_staging $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
+    # TODO: Add host to nginx & reload it
     # - apk add --update curl && rm -rf /var/cache/apk/*
     # - base=https://github.com/docker/machine/releases/download/v0.16.0 && curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/usr/local/bin/docker-machine && chmod +x /usr/local/bin/docker-machine
     # - docker-machine --version    
     # - docker-machine ls
   environment:
     name: stage
-    url: https://beta.example.com
+    url: http://$CI_COMMIT_REF_NAME.dev.newbusinesslogic.com
 
 production: 
   stage: production 
