--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,17 +11,17 @@ variables:
   DATABASE_URL: 'mongodb://mongo/user_posts'
 
 before_script:
-  # - echo $GOOGLE_APPLICATION_CREDENTIALS
   - cd reddit
-  # - bundle install
+  - bundle install
 
 build:
   image: docker:18.09
   stage: build
+  only:
+    - /^\d+\.\d+\.\d+/
+    - branches
   services:
       - docker:18.09-dind
-  # only:
-  #   - /^build/
   variables:
     DOCKER_HOST: tcp://docker:2375/
     DOCKER_DRIVER: overlay2
@@ -39,7 +39,6 @@ test_unit_job:
   only:
     - /^test/
   script:
-    - bundle install
     - ruby simpletest.rb
 
 test_integration_job:
@@ -63,10 +62,11 @@ branch review:
 
 stage: 
   image: docker:18.09
-  stage: stage 
-  # when: manual
-  # only:
-  #   - /^\d+\.\d+\.\d+/
+  stage: stage
+  when: manual
+  only:
+    - /^\d+\.\d+\.\d+/
+    - branches
   variables:
     DOCKER_HOST: tcp://104.155.2.98:2376
     DOCKER_TLS_VERIFY: 1
@@ -77,16 +77,10 @@ stage:
     - echo "$TLSCACERT" > $DOCKER_CERT_PATH/ca.pem
     - echo "$TLSCERT" > $DOCKER_CERT_PATH/cert.pem
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
-    # - docker run -d -p 9292:9292 --name reddit $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker rm -f $CONTAINER_NAME || true
     - docker run -d --name $CONTAINER_NAME --network ivango812_microservices_staging $REGISTRY_USER/reddit:$CI_COMMIT_SHORT_SHA
     - docker ps
     - docker exec nginx /srv/create-new-site.sh $CI_COMMIT_REF_NAME
-    # For install docker-machine:
-    # - apk add --update curl && rm -rf /var/cache/apk/*
-    # - base=https://github.com/docker/machine/releases/download/v0.16.0 && curl -L $base/docker-machine-$(uname -s)-$(uname -m) >/usr/local/bin/docker-machine && chmod +x /usr/local/bin/docker-machine
-    # - docker-machine --version    
-    # - docker-machine ls
   environment:
     name: review/$CI_COMMIT_REF_NAME
     url: http://$CI_COMMIT_REF_NAME.dev.newbusinesslogic.com
@@ -106,9 +100,7 @@ stage_remove:
     - echo "$TLSCACERT" > $DOCKER_CERT_PATH/ca.pem
     - echo "$TLSCERT" > $DOCKER_CERT_PATH/cert.pem
     - echo "$TLSKEY" > $DOCKER_CERT_PATH/key.pem
-    # Turn the site off at nginx
     - docker exec nginx /srv/remove-site.sh $CI_COMMIT_REF_NAME
-    # Remove container with app
     - docker rm -f $CONTAINER_NAME
 
 production: 
