--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ branch review:
   except:
     - master
 
-stage deploy: 
+staging: 
   image: docker:18.09
   stage: stage
   when: manual
@@ -110,4 +110,4 @@ production:
     - echo 'Deploy' 
   environment:
     name: production
-    url: https://example.com
+    url: https://project.com
