test chatops stage 2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,9 @@ image: ruby:2.4.2
 stages:
   - build
   - test
+  - chatops
   - review
   - stage
-  - chatops
   - production
 
 variables:
@@ -117,7 +117,8 @@ hello-world:
   stage: chatops
   only: [chat]
   script:
-    - echo "Hello World."
+    - echo "This command will not be shown."
+    - echo -e "section_start:$( date +%s ):chat_reply\r\033[0K\n$( ls -la )\nsection_end:$( date +%s ):chat_reply\r\033[0K"
 
 production: 
   stage: production 
