Fixed mongo image source in deployment.yml

--- a/kubernetes/reddit/mongo-deployment.yml
+++ b/kubernetes/reddit/mongo-deployment.yml
@@ -15,5 +15,5 @@
             app: mongo
         spec:
           containers:
-          - image: chromko/mongo
+          - image: mongo:3.2
             name: mongo
