--- a/kubernetes/reddit/post-deployment.yml
+++ b/kubernetes/reddit/post-deployment.yml
@@ -23,5 +23,5 @@
           - image: ivango/post
             name: post
             env:
-            - name: COMMENT_DATABASE_HOST
+            - name: POST_DATABASE_HOST
               value: post-db
